2025-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (print_character_request): Fix
	blunder in lexical analysis.  We were skipping over spaces
	_prior_ to arguments, but not _after_ them, just before we hit
	the end of the line, and issuing a spurious error diagnostic.
	Fix it by moving the condition that terminates the input reading
	loop, making it formally infinite (but with a conditional
	`break` in the middle--we'll read a newline or EOF eventually).

2025-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[groff]: Add unit test for new `pchar` request.

	* src/roff/groff/tests/pchar-request-works.sh: Do it.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Describe character (classes) better.  Character classes
	have one more property beyond their name, and lists of ranges
	and nested classes: a set of character flags that the formatter
	bitwise "or"s with any character members of the class
	{recursively}.  However, the computation of flags applicable to
	a character has been done lazily almost from the time the
	character class feature was first implemented, presumably to
	keep a `cflags` request on a highly populated character class
	from taking a lot of time.  Improve the output of `pchar`
	accordingly.  When reporting properties of a character class,
	report the flags associated with it.  When reporting properties
	of a character, if it is a member of any class, compute its
	"effective" character flags and report them in distinction to
	its "inherent" character flags if they differ.  Then, revert the
	lazy computation of the effective character flags so that the
	`pchar` request has no visible effect on formatter state; we
	want this property for debugging documents, avoiding Heisenbugs.

	* roff/troff/charinfo.h (class charinfo): Declare new
	`describe_flags()` member function returning `void`.